--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg position-absolute top-0 z-index-3 w-100 shadow-none my-3  navbar-transparent ">
     <div class="container">
       <a class="navbar-brand  text-white " href="https://demos.creative-tim.com/material-kit/presentation" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
-        Material Kit 2
+        Schmoozer &trade;
       </a>
       <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon mt-2">
@@ -371,14 +371,11 @@
               </div>
             </ul>
           </li>
-          <li class="nav-item ms-lg-auto">
-            <a class="nav-link nav-link-icon me-2" href="https://github.com/creativetimofficial/soft-ui-design-system" target="_blank">
-              <i class="fa fa-github me-1"></i>
-              <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Star us on Github">Github</p>
+           <li class="nav-item my-auto ms-3 ms-lg-0">
+            <a href="https://github.com/laszlo-ratesic/schmoozer" class="btn btn-sm  bg-gradient-dark  mb-0 me-1 mt-2 mt-md-0"  data-bs-toggle="tooltip" data-bs-placement="bottom" title="Star us on Github">
+                <i class="fa fa-github me-1 fs-6"></i>
+                <p class="d-inline text-sm z-index-1 font-weight-bold">Github</p>
             </a>
-          </li>
-          <li class="nav-item my-auto ms-3 ms-lg-0">
-            <a href="https://www.creative-tim.com/product/material-kit-pro" class="btn btn-sm  bg-gradient-primary  mb-0 me-1 mt-2 mt-md-0">Upgrade to Pro</a>
           </li>
         </ul>
       </div>
@@ -414,7 +411,8 @@
               </div>
             </div>
             <div class="card-body">
-              <form role="form" class="text-start">
+              <form role="form" class="text-start" autocomplete="off">
+                  <input autocomplete="false" type="hidden"/>
                 <div class="input-group input-group-outline my-3">
                   <label class="form-label">Email</label>
                   <input type="email" class="form-control">
@@ -430,9 +428,16 @@
                 <div class="text-center">
                   <button type="button" class="btn bg-gradient-primary w-100 my-4 mb-2">Sign in</button>
                 </div>
-                <p class="mt-4 text-sm text-center">
-                  Don't have an account?
-                </p>
+                <a
+                class="btn-register"
+                data-toggle="modal"
+                href="javascript:void(0)"
+                onclick="openRegisterModal();"
+                >
+                    <p class="mt-4 text-sm text-center">
+                        Don't have an account?
+                    </p>
+                </a>
               </form>
             </div>
           </div>
@@ -448,20 +453,19 @@
                 document.write(new Date().getFullYear())
               </script>,
               made with <i class="fa fa-heart" aria-hidden="true"></i> by
-              <a href="https://www.creative-tim.com" class="font-weight-bold text-white" target="_blank">Creative Tim</a>
-              for a better web.
+              <a href="https://keenan.vip" class="font-weight-bold text-white" target="_blank">Keenan Chiasson</a>.
             </div>
           </div>
           <div class="col-12 col-md-6">
             <ul class="nav nav-footer justify-content-center justify-content-lg-end">
               <li class="nav-item">
-                <a href="https://www.creative-tim.com" class="nav-link text-white" target="_blank">Creative Tim</a>
+                <a href="https://keenan.vip" class="nav-link text-white" target="_blank">Keenan Chiasson</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.creative-tim.com/presentation" class="nav-link text-white" target="_blank">About Us</a>
+                <a href="https://www.github.com/laszlo-ratesic" class="nav-link text-white" target="_blank">GitHub</a>
               </li>
               <li class="nav-item">
-                <a href="https://www.creative-tim.com/blog" class="nav-link text-white" target="_blank">Blog</a>
+                <a href="https://www.medium.com/@keenanrc" class="nav-link text-white" target="_blank">Blog</a>
               </li>
               <li class="nav-item">
                 <a href="https://www.creative-tim.com/license" class="nav-link pe-0 text-white" target="_blank">License</a>
@@ -472,5 +476,128 @@
       </div>
     </footer>
   </div>
+  <div class="modal fade login" id="loginModal">
+        <div class="modal-dialog login animated">
+          <div class="modal-content">
+            <div class="modal-header" style="display: block;">
+              <button
+                type="button"
+                class="close"
+                data-bs-toggle="modal"
+                aria-hidden="true"
+                style="background: transparent; -webkit-appearance: none; opacity: 0.2; float: right; border: 0; padding: 0; font-size: 21px; font-weight: bold; line-height: 1; color: #000;"
+              >
+                &times;
+              </button>
+              <h4 class="modal-title" style="font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;">Login with</h4>
+            </div>
+            <div class="modal-body">
+              <div class="box">
+                <div class="content">
+                  <div class="social" style="line-height:1.4;">
+                    <a class="circle github" href="#">
+                      <i class="fa fa-github fa-fw"></i>
+                    </a>
+                    <a id="google_login" class="circle google" href="#">
+                      <i class="fa fa-google-plus fa-fw"></i>
+                    </a>
+                    <a id="facebook_login" class="circle facebook" href="#">
+                      <i class="fa fa-facebook fa-fw"></i>
+                    </a>
+                  </div>
+                  <div class="division">
+                    <div class="line l"></div>
+                    <span>or</span>
+                    <div class="line r"></div>
+                  </div>
+                  <div class="error"></div>
+                  <div class="form loginBox">
+                    <form method="" action="" accept-charset="UTF-8">
+                      <input
+                        id="email"
+                        class="form-control"
+                        type="text"
+                        placeholder="Email"
+                        name="email"
+                      />
+                      <input
+                        id="password"
+                        class="form-control"
+                        type="password"
+                        placeholder="Password"
+                        name="password"
+                      />
+                      <input
+                        class="btn btn-default btn-login"
+                        type="button"
+                        value="Login"
+                        onclick="loginAjax()"
+                      />
+                    </form>
+                  </div>
+                </div>
+              </div>
+              <div class="box">
+                <div class="content registerBox" style="display: none;">
+                  <div class="form">
+                    <form
+                      method=""
+                      html="{:multipart=>true}"
+                      data-remote="true"
+                      action=""
+                      accept-charset="UTF-8"
+                    >
+                      <input
+                        id="email"
+                        class="form-control"
+                        type="text"
+                        placeholder="Email"
+                        name="email"
+                      />
+                      <input
+                        id="password"
+                        class="form-control"
+                        type="password"
+                        placeholder="Password"
+                        name="password"
+                      />
+                      <input
+                        id="password_confirmation"
+                        class="form-control"
+                        type="password"
+                        placeholder="Repeat Password"
+                        name="password_confirmation"
+                      />
+                      <input
+                        class="btn btn-default btn-register"
+                        type="button"
+                        value="Create account"
+                        name="commit"
+                      />
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <div class="forgot login-footer">
+                <span>
+                  Looking to
+                  <a href="javascript: showRegisterForm();">
+                    create an account
+                  </a>
+                  ?
+                </span>
+              </div>
+              <div class="forgot register-footer" style="display: none;">
+                <span>Already have an account?</span>
+                <a href="javascript:void(0)" data-bs-toggle="modal">Login</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
   {{> scripts}}
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="/js/register.js" type="text/javascript"></script>
 </body>
