--- a/views/partials/scripts.handlebars
+++ b/views/partials/scripts.handlebars
@@ -2,11 +2,8 @@
 <script src="/js/core/popper.min.js" type="text/javascript"></script>
 <script src="/js/core/bootstrap.min.js" type="text/javascript"></script>
 <script src="/js/plugins/perfect-scrollbar.min.js"></script>
-<!--  Plugin for Parallax, full documentation here: https://github.com/wagerfield/parallax  -->
-<script src="/js/plugins/parallax.min.js"></script>
-<!-- Control Center for Material UI Kit: parallax effects, scripts for the example pages etc -->
+<script src="/js/plugins/smooth-scrollbar.min.js"></script>
 <!--  Google Maps Plugin    -->
 <script
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"
 ></script>
-<script src="/js/material-kit.min.js?v=3.0.2" type="text/javascript"></script>
