--- a/views/partials/sidebar.handlebars
+++ b/views/partials/sidebar.handlebars
@@ -71,34 +71,6 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="../pages/virtual-reality.html">
-          <div
-            class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-          >
-            <i class="material-icons opacity-10">
-              view_in_ar
-            </i>
-          </div>
-          <span class="nav-link-text ms-1">
-            Virtual Reality
-          </span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="../pages/rtl.html">
-          <div
-            class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-          >
-            <i class="material-icons opacity-10">
-              format_textdirection_r_to_l
-            </i>
-          </div>
-          <span class="nav-link-text ms-1">
-            RTL
-          </span>
-        </a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link text-white" href="../pages/notifications.html">
           <div
             class="text-white text-center me-2 d-flex align-items-center justify-content-center"
@@ -134,7 +106,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="../pages/sign-in.html">
+        <a class="nav-link text-white" href="/auth/login">
           <div
             class="text-white text-center me-2 d-flex align-items-center justify-content-center"
           >
@@ -148,7 +120,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="../pages/sign-up.html">
+        <a class="nav-link text-white" href="/auth/register">
           <div
             class="text-white text-center me-2 d-flex align-items-center justify-content-center"
           >
