--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <body class="g-sidenav-show  bg-gray-200">
-  {{> sidebar}}
+  {{> sidenav}}
   <main
     class="main-content position-relative max-height-vh-100 h-100 border-radius-lg"
   >
