--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1596,6 +1596,6 @@
   </script>
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
-  <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
+  <!-- Control Center for : parallax effects, scripts for the example pages etc -->
   <script src="/js/material-dashboard.min.js?v=3.0.2"></script>
 </body>
