--- a/views/partials/sidenav.handlebars
+++ b/views/partials/sidenav.handlebars
@@ -27,7 +27,7 @@
     <ul class="navbar-nav">
       <li class="nav-item">
         <a
-          class="nav-link text-white active bg-gradient-primary"
+          class="nav-link text-white"
           href="/admin/dashboard"
         >
           <div
@@ -43,7 +43,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="../pages/tables.html">
+        <a class="nav-link text-white" href="/admin/tables">
           <div
             class="text-white text-center me-2 d-flex align-items-center justify-content-center"
           >
@@ -57,27 +57,6 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="../pages/notifications.html">
-          <div
-            class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-          >
-            <i class="material-icons opacity-10">
-              notifications
-            </i>
-          </div>
-          <span class="nav-link-text ms-1">
-            Notifications
-          </span>
-        </a>
-      </li>
-      <li class="nav-item mt-3">
-        <h6
-          class="ps-4 ms-2 text-uppercase text-xs text-white font-weight-bolder opacity-8"
-        >
-          Account pages
-        </h6>
-      </li>
-      <li class="nav-item">
         <a class="nav-link text-white" href="/admin/profile">
           <div
             class="text-white text-center me-2 d-flex align-items-center justify-content-center"
@@ -88,20 +67,6 @@
           </div>
           <span class="nav-link-text ms-1">
             Profile
-          </span>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link text-white" href="/auth/login">
-          <div
-            class="text-white text-center me-2 d-flex align-items-center justify-content-center"
-          >
-            <i class="material-icons opacity-10">
-              login
-            </i>
-          </div>
-          <span class="nav-link-text ms-1">
-            Sign In
           </span>
         </a>
       </li>
