--- a/views/partials/sidenav.handlebars
+++ b/views/partials/sidenav.handlebars
@@ -48,11 +48,11 @@
             class="text-white text-center me-2 d-flex align-items-center justify-content-center"
           >
             <i class="material-icons opacity-10">
-              table_view
+              group
             </i>
           </div>
           <span class="nav-link-text ms-1">
-            Tables
+            Friends
           </span>
         </a>
       </li>
