--- a/views/partials/sidenav.handlebars
+++ b/views/partials/sidenav.handlebars
@@ -43,7 +43,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white" href="/admin/tables">
+        <a class="nav-link text-white" href="/admin/friends">
           <div
             class="text-white text-center me-2 d-flex align-items-center justify-content-center"
           >
