--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -259,7 +259,7 @@
             <div class="col-12 col-xl-4">
               <div class="card card-plain h-100">
                 <div class="card-header pb-0 p-3">
-                  <h6 class="mb-0">Conversations</h6>
+                  <h6 class="mb-0">Reactions</h6>
                 </div>
                 <div class="card-body p-3">
                   <ul class="list-group">
