--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -201,11 +201,7 @@
     </nav>
     <!-- End Navbar -->
     <div class="container-fluid py-4">
-      <div class="row">
-          {{> thought}}
-          {{> thought}}
-          {{> thought}}
-          {{> thought}}
+      <div id="thought-list" class="row">
       </div>
       <div class="row mt-4">
         <div class="col-lg-4 col-md-6 mt-4 mb-4">
@@ -1147,6 +1143,7 @@
       </div>
     </div>
   </div>
+  <script src="/js/thought-list.js"></script>
   <!--   Core JS Files   -->
   <script src="/js/core/popper.min.js"></script>
   <script src="/js/core/bootstrap.min.js"></script>
